# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./connectors";
 export * from "./costs";
 export * from "./brain-versions";
 export * from "./scheduler";
+export * from "./governance";
